2007-05-30	Nicholas Niro	<nik_89@neuroponic.com>
	* src/events/events.c (addKeyEvent): 
	removed keyboard limitation from only one callback 
	per keys to an infinite amount.

2007-05-29	Nicholas Niro	<nik_89@neuroponic.com>
	* src/extlib/sdl.c (u32 KeySymsTranslateTable): 
	added more elements to the keymap translation 
	table to support more keyboard keys. 
	Theres more work to come with this constant 
	to support all the keys.

2007-05-20	Nicholas Niro	<nik_89@neuroponic.com>
	* src/extlib/sdl.c (Lib_CreateVobject): made created
	vobject be created of the same resolution as the 
	screen as a default (16 bpp default). This is an
	attempt to hack SDL's palette when we load bitmaps.

	* src/misc/bitmap.c (processGradual_BMP): Changed the
	masks that will be passed to Lib_CreateVobject()
	so it only do 16 bpp masks.

2007-04-03	Nicholas Niro	<nik_89@neuroponic.com>
	* src/video/interface.c (Neuro_FlushDraw): removed
	a line that that filled a rectangle in black without
	redrawing the content below the location. This was
	a bug in the TODO list. I suspect this line was part
	of the old method to clean the old location of an image
	when it was redrawn at a different location.

2007-03-28	Nicholas Niro	<nik_89@neuroponic.com>
	* src/debug.c: created a new but temporary clone
	of the function Debug_Channel which is only meant
	to be a replacement until the real Debug_Channel
	function is made to support an interface function.

	* src/misc/bitmap.c: moved the inclusion of bitmap.h
	to the beginning of the include list instead of at the
	end so the flags from config.h were well used to include 
	zlib.h.

	* include/neuro/neuro_engine.h: added #include 
	<config.h> to include the defines from the 
	configure script into the project.
	
	* configure.ac: removed checks for c++ in the script.
	Made the project use autoheader so the compilation
	process takes less arguments. Started to implement
	the symbols libtool call so libneuro would only
	export specific functions.
